k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    service: client
spec:
  selector:
    app: client
  ports:
    - name: client
      port: 8080
      targetPort: 8080
