k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
spec:
  rules:
    - host: lse.neanias.eu
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client
                port:
                  number: 8080
  tls: 
    - hosts: 
      - lse.neanias.eu
      secretName: lse-tls-cert
